test/scc_test/decl/semantic-errors/046.a
046.t:1:20: error: 'inline' specifier allowed on function declarations only